第3.0.3版更新測試

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@ document.addEventListener("DOMContentLoaded", function () {
 	}
 
 	function startSessionMonitor(uid) {
+		console.log("執行 startSessionMonitor(uid)，收到 uid =", uid);
 		// 初始化 Firebase
 		const firebaseConfig = {
 			apiKey: "AIzaSyD1izD51xRUcs5kVHffqB9-r5QPiSPB4cA",
