第3.1.2版更新測試

--- a/index.html
+++ b/index.html
@@ -182,14 +182,15 @@
     <script>
       // 初始化 Firebase
       const firebaseConfig = {
-        apiKey: "AIzaSyD1izD51xRUcs5kVHffqB9-r5QPiSPB4cA",
+        apiKey: "AIzaSyDlizD51xRUcs5kVHFfqB9-r5QPisPB4cA",
         authDomain: "eurekasciencelaboratory.firebaseapp.com",
         databaseURL:
           "https://eurekasciencelaboratory-default-rtdb.asia-southeast1.firebasedatabase.app",
         projectId: "eurekasciencelaboratory",
-        storageBucket: "eurekasciencelaboratory.appspot.com",
+        storageBucket: "eurekasciencelaboratory.firebasestorage.app",
         messagingSenderId: "881933165589",
-        appId: "1:881933165589:web:f7dcda293489a9bb2cda1c",
+        appId: "1:881933165589:web:f7dcd2a93489a9bb2cda1c",
+        measurementId: "G-3KXN92S88D",
       };
       firebase.initializeApp(firebaseConfig);
       document.addEventListener("DOMContentLoaded", function () {
