安全性更新

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <script>
       // 初始化 Firebase
       const firebaseConfig = {
-        apiKey: "AIzaSyDlizD51xRUcs5kVHFfqB9-r5QPisPB4cA",
+        apiKey: "__FIREBASE_API_KEY__",
         authDomain: "eurekasciencelaboratory.firebaseapp.com",
         databaseURL:
           "https://eurekasciencelaboratory-default-rtdb.asia-southeast1.firebasedatabase.app",
