fix:分割系統安全性修正1.1

--- a/07-climate-agency-wrathofwind/index.html
+++ b/07-climate-agency-wrathofwind/index.html
@@ -118,6 +118,6 @@
         else start();
       })();
     </script>
-    <script type="module" src="auth.js"></script>
+    <script type="module" src="/auth.js"></script>
   </body>
 </html>
